# ansible-ssh

./: .travis.yml  CHANGES.md  README.md  ansible-ssh.cabal
src/: Main.hs
src/Main/: Ansible.hs  Options.hs
