name:           ansible-ssh
version:        0.1.1
description:    Please see the README on Github at <https://github.com/githubuser/ansible-ssh#readme>
homepage:       https://github.com/githubuser/ansible-ssh#readme
bug-reports:    https://github.com/githubuser/ansible-ssh/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2018 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/ansible-ssh

executable ansible-ssh
  main-is: Main.hs
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base,
      aeson,
      exceptions,
      lens,
      lens-aeson,
      optparse-applicative,
      optparse-text,
      parsec,
      system-filepath,
      text,
      turtle,
      unix
  other-modules:
      Main.Options,
      Main.Ansible,
      Paths_ansible_ssh
  default-language: Haskell2010
