name:           ansible-ssh
version:        0.1.2
description:    Please see the README.md on Github at <https://github.com/mikemckibben/ansible-ssh#readme>
homepage:       https://github.com/mikemckibben/ansible-ssh#readme
bug-reports:    https://github.com/mikemckibben/ansible-ssh/issues
author:         Michael McKibben
maintainer:     mikemckibben@gmail.com
copyright:      2018 Michael McKibben
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    CHANGES.md
    README.md

source-repository head
  type: git
  location: https://github.com/mikemckibben/ansible-ssh

executable ansible-ssh
  main-is: Main.hs
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base,
      aeson,
      exceptions,
      lens,
      lens-aeson,
      optparse-applicative,
      optparse-text,
      parsec,
      system-filepath,
      text,
      turtle,
      unix
  other-modules:
      Main.Options,
      Main.Ansible,
      Paths_ansible_ssh
  default-language: Haskell2010
